--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,9 @@
   "name": "backend",
   "packageManager": "yarn@4.6.0",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2"
   },
   "scripts": {
     "dev": "yarn nodemon src/server.js"
